charts/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
spec:
  selector:
    app: httpbin
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
